grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
spec:
  parentRefs:
    - name: cilium-gw
      namespace: gateway
  hostnames:
    - monitoring.local-lab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-service
          port: 80
