hello-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: hashicorp/http-echo:0.2.3
          args:
            - "-text=Hello World"
          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: hello
spec:
  addresses:
    - type: IPAddress
      value: 192.168.59.113
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: hello
spec:
  parentRefs:
    - name: hello-gateway
  hostnames:
    - hello.local-lab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-service
          port: 80
