longhorn-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: longhorn-system
spec:
  parentRefs:
    - name: cilium-gw
      namespace: gateway
  hostnames:
    - longhorn.local-lab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
